--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">RemindMeTV</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="textView_welcome_message">Welcome to RemindMeTv !</string>
+    <string name="textView_startscreen_tip">Type a TV show, program or movie and tap the magnifying glass to start&#8230;</string>
+    <string name="button_startscreen_search">Find</string>
+    <string name="editText_startscreen_search_hint">Type your keywords here...</string>
 
 </resources>
