Fixed search button image size and description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="editText_startscreen_search_hint">Type your keywords here...</string>
     <string name="title_activity_complete_information">Complete Information</string>
     <string name="button_add_to_calendar">Add to Calendar</string>
+    <string name="image_button_search_description">Search!</string>
 
 </resources>
