--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="info_airday">Air day: %s</string>
     <string name="textView_watch">Air info</string>
     <string name="textView_info">Info</string>
+    <string name="action_events_list">Events List</string>
 
 </resources>
